# Iris-art-app-

./: .gitignore  HOW_TO_FIX_IRIS_ENGINE.txt  PROJECT_DOCUMENTATION.md  README.md  RUN_DEBUG_WINDOWS.md  TODO.md  build_with_opencv.cmd  build_with_opencv.ps1  clean_windows_build.ps1  copy_vcpkg_dlls_to_build.cmd  copy_vcpkg_dlls_to_build.ps1  pubspec.yaml  run_iris_designer.cmd
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/iris_designer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  sizes.txt
lib/Core/Config/: App_router.dart  Theme.dart  dependecy_injection.dart  failures.dart  hive_init.dart
lib/Core/Native/: iris_engine_loader.dart  native_iris_bridge.dart
lib/Core/Services/: hive_service.dart  iris_engine_bindings.dart  iris_engine_service.dart  photopea_service.dart
lib/Core/Shared/Widgets/: global_custom_navbar.dart  global_submit_button_widget.dart
lib/Core/Utils/: toast_service.dart
lib/Features/ART_STUDIO/Presentation/pages/: iris_studio_screen.dart
lib/Features/ART_STUDIO/Presentation/views/: case1_view.dart  case2_view.dart  case3_view.dart  case4_view.dart  case5_view.dart  case6_view.dart
lib/Features/ART_STUDIO/Presentation/widgets/: iris_placeholder.dart
lib/Features/EDITOR/Domain/entities/: circling_params.dart  iris_image.dart
lib/Features/EDITOR/Domain/services/: color_adjustment_dart.dart
lib/Features/EDITOR/Domain/usecases/: save_image_progress_usecase.dart
lib/Features/EDITOR/Presentation/bloc/: editor_bloc.dart  editor_event.dart  editor_state.dart
lib/Features/EDITOR/Presentation/pages/: iris_editing_screen.dart
lib/Features/EDITOR/Presentation/views/: circling_view.dart  color_adjustment_view.dart  flash_correction_view.dart
lib/Features/EDITOR/Presentation/widgets/: queue_image_item.dart
lib/Features/ONBOARDING/Data/repositories/: onboarding_repository_impl.dart
lib/Features/ONBOARDING/Domain/entities/: client_session.dart  client_session.g.dart
lib/Features/ONBOARDING/Domain/respositories/: onboarding_repository.dart
lib/Features/ONBOARDING/Domain/usecases/: start_session_usecase.dart
lib/Features/ONBOARDING/Presentation/bloc/: onboarding_bloc.dart
lib/Features/ONBOARDING/Presentation/pages/: client_intake_screen.dart  splash_screen.dart
lib/Features/ONBOARDING/Presentation/pages/views/: intake_screen_first_half.dart  intake_screen_second_half.dart
lib/Features/ONBOARDING/Presentation/widgets/: custom_dropdown.dart  custom_text_field.dart  session-history-dialog.dart  text_field_widget.dart
lib/Features/PROJECT_HUB/Data/repositories/: project_hub_repository_impl.dart
lib/Features/PROJECT_HUB/Domain/entities/: project_details.dart
lib/Features/PROJECT_HUB/Domain/respositories/: project_hub_repository.dart
lib/Features/PROJECT_HUB/Domain/usecases/: load_project_data_usecase.dart  upload_image_usecase.dart
lib/Features/PROJECT_HUB/Presentation/bloc/: project_hub_bloc.dart
lib/Features/PROJECT_HUB/Presentation/pages/screen 1/: image_prep_screen1.dart
lib/Features/PROJECT_HUB/Presentation/pages/screen 1/views/: image_prep_view1.dart  instruction_view.dart
lib/Features/PROJECT_HUB/Presentation/pages/screen 2/: image_prep_screen2.dart
lib/Features/PROJECT_HUB/Presentation/pages/screen 2/views/: image_editing_view.dart  image_prep_view2.dart
lib/Features/PROJECT_HUB/Presentation/widgets/: client_info_card.dart  dotted_button_widget.dart  image_grid_widget.dart  status_chip_widget.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/iris_engine/: CMakeLists.txt  README.md  iris_cut.cpp  iris_cut.h  iris_engine.cpp  iris_engine.h  iris_engine_ffi.cpp  iris_engine_ffi.h
windows/runner/: CMakeLists.txt  Runner.rc  copy_vcpkg_dlls.cmake  main.cpp
